--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # DATABASE 
 DB_PASSWORD=password
-DB_NAME=teski-shop
+DB_NAME=family_health
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=velkin
@@ -11,3 +11,4 @@ HOST_NAME=http://localhost:3000/api
 #JWT AUTH
 JWT_SECRET = 'Ko7cAYvW9&U2iDKnL3NCkUWubj28ikRT#xQSuFaLPxnHS$#j34@uJ8mAJmbEs*rUz9yUN%4eXp'
 JWT_EXPIRESIN = 7d
+
