--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # DATABASE 
-DB_PASSWORD=13velkinVE+ZA
-DB_NAME=estsudiop_family
-DB_HOST=postgresql-estsudiop.alwaysdata.net
+DB_PASSWORD=password
+DB_NAME=family_health
+DB_HOST=localhost
 DB_PORT=5432
-DB_USERNAME=estsudiop_tesis
+DB_USERNAME=velkin
 
 # APP
 HOST_NAME=http://localhost:3000/api
