--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,11 @@ HOST_NAME=http://localhost:3000/api
 JWT_SECRET = 'Ko7cAYvW9&U2iDKnL3NCkUWubj28ikRT#xQSuFaLPxnHS$#j34@uJ8mAJmbEs*rUz9yUN%4eXp'
 JWT_EXPIRESIN = 7d
 
+# node mailer
+MAIL_MAILER=smtp
+MAIL_HOST=mail.ebit-software.com
+MAIL_PORT=587
+MAIL_USERNAME=no-reply@ebit-software.com
+MAIL_PASSWORD=^Im~CwP8Hp7Q
+MAIL_ENCRYPTION=false
+MAIL_FROM_ADDRESS=no-reply@ebit-software.com
