enpoint crear usuario con imagen

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ MAIL_USERNAME=no-reply@ebit-software.com
 MAIL_PASSWORD=^Im~CwP8Hp7Q
 MAIL_ENCRYPTION=false
 MAIL_FROM_ADDRESS=no-reply@ebit-software.com
+
+# cloudinary
+CLOUD_NAME=di2t0mjjf
+API_KEY=548452143573196
+API_SECRET=zmAVm1VPIIzGdtjOuA7h4V4Kuy0
