--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "twilio": "^4.14.0",
     "typeorm": "^0.3.12",
     "ua-parser-js": "^1.0.35"
   },
