--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,4 @@ API_SECRET=zmAVm1VPIIzGdtjOuA7h4V4Kuy0
 TWILIO_ACCOUNT_SID=ACc6af9e28168b81d2a2a6f9369cd308df
 TWILIO_AUTH_TOKEN=567b68fff4db1b71690f559771f4e5eb
 TWILIO_PHONE_NUMBER=+12707166551
+# TWILIO_PHONE_NUMBER=+14155238886 #whatsapp
