--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ DB_PORT=5432
 DB_USERNAME=estsudiop_tesis
 
 # APP
-HOST_NAME=http://localhost:3000/api
+HOST_NAME=https://utmfamilyhealth.site
 
 #JWT AUTH
 JWT_SECRET = 'Ko7cAYvW9&U2iDKnL3NCkUWubj28ikRT#xQSuFaLPxnHS$#j34@uJ8mAJmbEs*rUz9yUN%4eXp'
