--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,28 @@
 # DATABASE 
-DB_PASSWORD=13velkinVE+ZA
-DB_NAME=estsudiop_family
-DB_HOST=postgresql-estsudiop.alwaysdata.net
+DB_PASSWORD=
+DB_NAME=
+DB_HOST=
 DB_PORT=5432
-DB_USERNAME=estsudiop_tesis
+DB_USERNAME=
 
 # APP
-HOST_NAME=https://utmfamilyhealth.site
+HOST_NAME=
 
 #JWT AUTH
 JWT_SECRET = 'Ko7cAYvW9&U2iDKnL3NCkUWubj28ikRT#xQSuFaLPxnHS$#j34@uJ8mAJmbEs*rUz9yUN%4eXp'
 JWT_EXPIRESIN = 7d
 
 # node mailer
-MAIL_MAILER=smtp
-MAIL_HOST=mail.ebit-software.com
-MAIL_PORT=587
-MAIL_USERNAME=no-reply@ebit-software.com
-MAIL_PASSWORD=^Im~CwP8Hp7Q
-MAIL_ENCRYPTION=false
-MAIL_FROM_ADDRESS=no-reply@ebit-software.com
+MAIL_MAILER=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_ADDRESS=
 
 # cloudinary
-CLOUD_NAME=di2t0mjjf
-API_KEY=548452143573196
-API_SECRET=zmAVm1VPIIzGdtjOuA7h4V4Kuy0
+CLOUD_NAME=
+API_KEY=
+API_SECRET=
 
